--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "recharts": "^3.4.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
