--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
+    "mammoth": "^1.11.0",
     "next": "^16.1.0",
     "pizzip": "^3.2.0",
     "quill": "^2.0.3",
